--- a/.github/workflows/ingest-approved-case.yml
+++ b/.github/workflows/ingest-approved-case.yml
@@ -1,18 +1,22 @@
-name: Ingest Approved Case (Issue → PR)
+name: Ingest Approved Case (Issue → main)
 on:
   issues:
     types: [labeled]
 
 permissions:
   contents: write
-  pull-requests: write
+  issues: write
 
 jobs:
   ingest:
     if: github.event.label.name == 'approved'
     runs-on: ubuntu-latest
+    env:
+      PYTHONDONTWRITEBYTECODE: "1"
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Install deps
         run: |
           python3 -m pip install --upgrade pip
@@ -23,12 +27,25 @@ jobs:
       - name: Build site json
         run: |
           python3 scripts/build_site.py
-      - name: Create PR
-        uses: peter-evans/create-pull-request@v6
+      - name: Commit & push
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A
+          if git diff --cached --quiet; then
+            echo "no changes"
+            exit 0
+          fi
+          git commit -m "data: ingest approved case (#${{ github.event.issue.number }})"
+          git push origin HEAD:main
+      - name: Comment back
+        uses: actions/github-script@v7
         with:
-          commit-message: "data: ingest approved case"
-          title: "data: ingest approved case (#${{ github.event.issue.number }})"
-          body: |
-            Auto-generated from approved issue: #${{ github.event.issue.number }}
-          branch: "bot/ingest-issue-${{ github.event.issue.number }}"
-          delete-branch: true
+          script: |
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
+            const issue_number = context.payload.issue.number;
+            await github.rest.issues.createComment({
+              owner, repo, issue_number,
+              body: '✅ Ingested into main. Gallery will update shortly.'
+            });
