--- a/.github/workflows/ingest-approved-case.yml
+++ b/.github/workflows/ingest-approved-case.yml
@@ -3,6 +3,11 @@ on:
   issues:
     types: [labeled]
 
+# Avoid push races when multiple issues are approved at once.
+concurrency:
+  group: ingest-approved-case
+  cancel-in-progress: false
+
 permissions:
   contents: write
   issues: write
@@ -17,6 +22,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Sync with main
+        run: |
+          git fetch origin main
+          git checkout main
+          git pull --rebase origin main
       - name: Install deps
         run: |
           python3 -m pip install --upgrade pip
@@ -37,6 +47,10 @@ jobs:
             exit 0
           fi
           git commit -m "data: ingest approved case (#${{ github.event.issue.number }})"
+
+          # Rebase on latest main to avoid non-fast-forward push
+          git pull --rebase origin main
+
           git push origin HEAD:main
       - name: Comment back
         uses: actions/github-script@v7
