refactor: README-based gallery, remove GitHub Pages
- Gallery now lives in README.md (no more github.io)
- Thumbnails moved to assets/thumbs/
- build_readme.py generates case sections from items.jsonl
- Removed site/, pages.yml, build_site.py
- Style inspired by PicoTrex/Awesome-Nano-Banana-images

--- a/.github/workflows/ingest-approved-case.yml
+++ b/.github/workflows/ingest-approved-case.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Ingest issue
         run: |
           python3 scripts/ingest_approved_case.py
-      - name: Build site json
+      - name: Build README
         run: |
-          python3 scripts/build_site.py
+          python3 scripts/build_readme.py
       - name: Commit & push
         run: |
           git config user.name "github-actions[bot]"
